# rl-racer

./: install.sh  install_cuda11.sh  pyproject.toml  requirements.txt  train_brax.ipynb
rl_racer/: direct_step.py
rl_racer/envs/v1/: hover.py  scene.xml
rl_racer/envs/v1/assets/: drone.stl
rl_racer/worlds/v1/: scene.xml
