[tool.poetry]
name = "rl-racer"
version = "0.1.0"
description = ""
authors = ["Carbon225 <carbon225@protonmail.com>"]
packages = [{include = "rl_racer"}]

[tool.poetry.dependencies]
python = "~3.10"
mujoco = "^2.3.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.271"
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
mediapy = "^1.1.6"
obj2mjcf = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
